Initial Change to Index.

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -28,23 +28,23 @@
               <div class="contain">
                 <!-- <img class="logo-slider" src="assets/image/logo-slider.png" alt="Logo"/> -->
                 <div class="title">
-                  <h1>WELCOME TO Q7 Clean</h1>
+                  <h1>WELCOME To Consulting International Group</h1>
                 </div>
                 <p class="description">
-                  &#34;Clean with a Conscience&#34;
+                  <!-- &#34;Clean with a Conscience&#34; -->
                 </p>
                 <div class="button">
                   <a href="#first-scroll" class="btn btn-default">Get Clean...</a>
                 </div>
                 <div class="slider-social">
-                  <div class="title">Coming Soon: </div>
-                  <ul>
-                    <!-- <li><a href="https://www.facebook.com/bruce.kaplan.50" target="_blank"><i
-                          class="fa fa-facebook fa-3x"></i></a></li> -->
+                  <!-- <div class="title">Coming Soon: </div> -->
+                  <!-- <ul>
+                    <li><a href="https://www.facebook.com/bruce.kaplan.50" target="_blank"><i
+                          class="fa fa-facebook fa-3x"></i></a></li> >
                     <li><a href="https://www.facebook.com/Q7Clean/" target="_blank"><i class="fa fa-facebook fa-3x"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCBPQkfSobjTjvrc6JCmQ-ow?view_as=subscriber" target="_blank"><i class="fab fa-youtube-square fa-3x"></i></a></li>
-                    <li><a href="https://www.instagram.com/q7cleaner/" target="_blank"><i class="fab fa-instagram fa-3x"></i></a></li>
-                  </ul>
+                    <li><a hre  f="https://www.instagram.com/q7cleaner/" target="_blank"><i class="fab fa-instagram fa-3x"></i></a></li>
+                  </ul> -->
                 </div>
               </div>
             </div>
